--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
 
     <ul class="nav">
       <img class ="logo" src="https://mbtskoudsalg.com/images/white-music-notes-png-2.png" width="35px" height="50px">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="keys.html">Key Signatures</a></li>
-        <li><a href="modes.html">Modes</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="keys.html">Key Signatures</a></li>
+      <li><a href="modes.html">Modes</a></li>
     </ul>
 
     <div class="pageBanner">
@@ -26,6 +26,10 @@
       <h3>Why did I make this website?</h3>
         <p>Because I was bored and wanted to put my web development skills to the test. In addition, as an A-level Music student, I would like for it to act as a revision tool.</p>
     </div>
+
+    <footer>
+      <small>Created by Jonny Edwards <br><a href="https://github.com/JonnyMate" target="_blank">Github</a> - <a href="https://twitter.com/ItsJonnyM8" target="_blank">Twitter</a></small>
+    </footer>
 
   </body>
 </html>
